DTO ve servis katmanı güncellendi: - Yeni DTO'lar eklendi - Servis katmanı iyileştirildi - Authentication servisi güncellendi